[package]
name = "hellostdweb"
version = "0.1.0"
authors = ["Dan Sheppard <dan@ebi.ac.uk>"]

[dependencies]
stdweb = "*"
stdweb-derive = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
lazy_static = "*"
rand="*"
separator = "*"
itertools = "*"

[build-dependencies]
webgl_generator = "*"
cargo-web="*"

[profile.release]
lto = true
