[package]
name = "hellostdweb"
version = "0.1.0"
authors = ["Dan Sheppard <dan@ebi.ac.uk>"]

[dependencies]
stdweb = "*"
stdweb-derive = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
lazy_static = "*"
rand="*"
separator = "*"
itertools = "*"
hsl = "*"

"t\u00e1naiste" = { version="0.1.1", path="../t\u00e1naiste" }

[build-dependencies]
webgl_generator = "*"
cargo-web="*"
regex = "*"

#[profile.release]
#lto = true
