[package]
name = "hellostdweb"
version = "0.1.0"
authors = ["Dan Sheppard <dan@ebi.ac.uk>"]
build = "build/build.rs"

[dependencies]
stdweb = "*"
stdweb-derive = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
serde_yaml = "*"
lazy_static = "*"
rand="*"
itertools = "*"
hsl = "*"
yaml-rust="*"
url="*"
base64="*"

"t\u00e1naiste" = { version="0.1.1", path="../t\u00e1naiste" }

[build-dependencies]
webgl_generator = "*"
cargo-web="*"
regex = "*"

#[profile.release]
#lto = true
