[package]
name = "hellostdweb"
version = "0.1.0"
authors = ["Dan Sheppard <dan@ebi.ac.uk>"]
build = "build/build.rs"

[dependencies]
stdweb = "*"
stdweb-derive = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
lazy_static = "*"
rand="*"
itertools = "*"
hsl = "*"
url="*"
base64="*"

"t\u00E1naiste" = { version="0.1.1", path="../t\u00E1naiste" }

[build-dependencies]
webgl_generator = "*"
cargo-web="*"
regex = "*"

[profile.release]
#lto = true
#incremental = false
